major pit strategy and evaluation rework (#11)
* dockerized java and python enviroments, updated shell scripts

* re organized flink processor folder

* update checkpointing and rolling policy intervals for file sinks. enhance pit stop evaluation logic with time gap metrics

* major pit stop strategy and evaluation rework, formatting and updated dashboard, added tests